# autodriver

./: .gitignore  CLAUDE.md  LICENSE  readme.md
ros/src/autodriver_bringup/: CMakeLists.txt  package.xml
ros/src/autodriver_bringup/config/: system.yaml
ros/src/autodriver_bringup/launch/: autodriver.launch.xml  monitoring.launch.xml  perception.launch.xml  perception_system.launch.xml
ros/src/common/autodriver_cmake/: CMakeLists.txt  autodriver_cmake-extras.cmake  package.xml
ros/src/common/autodriver_cmake/cmake/: FindAutodriverCUDA.cmake
ros/src/common/autoware_vehicle_msgs/: CMakeLists.txt  package.xml
ros/src/common/autoware_vehicle_msgs/msg/: SteeringReport.msg  VelocityReport.msg
ros/src/common/ipc_unix_socket/: CMakeLists.txt  package.xml
ros/src/common/ipc_unix_socket/include/ipc_unix_socket/: ipc_unix_socket.hpp
ros/src/common/ipc_unix_socket/src/: ipc_unix_socket.cpp
ros/src/common/ipc_unix_socket/test/: test_ipc_unix_socket.cpp
ros/src/common/tier4_map_msgs/: CMakeLists.txt  package.xml
ros/src/common/tier4_map_msgs/msg/: MapProjectorInfo.msg
ros/src/localization/hybrid_localization/: CMakeLists.txt  README.md  package.xml
ros/src/localization/hybrid_localization/config/: hybrid_localization.param.yaml
ros/src/localization/hybrid_localization/include/hybrid_localization/: hybrid_localization_node.hpp  parameters.hpp  types.hpp
ros/src/localization/hybrid_localization/include/hybrid_localization/eskf/: eskf_core.hpp  gnss_update_handler.hpp  odom_builder.hpp
ros/src/localization/hybrid_localization/launch/: hybrid_localization.launch.xml
ros/src/localization/hybrid_localization/src/: cb_gnss.cpp  cb_imu.cpp  cb_initialpose.cpp  cb_vehicle.cpp  hybrid_localization_node.cpp  main.cpp  node_params.cpp  parameters.cpp  publish.cpp
ros/src/localization/hybrid_localization/src/eskf/: eskf_core.cpp  gnss_update_handler.cpp  odom_builder.cpp
ros/src/localization/hybrid_localization/src/fgo/: eskf_corrector.cpp  fgo_backend.cpp  imu_buffer.cpp  imu_preintegration.cpp  keyframe_buffer.cpp
ros/src/localization/hybrid_localization/src/preprocess/: gnss_heading_arbitrator.cpp  gnss_preprocessor.cpp  imu_calibration_manager.cpp  imu_preprocessor.cpp
ros/src/localization/hybrid_localization/src/util/: diagnostics_publisher.cpp  map_projector.cpp  tf_cache.cpp
ros/src/localization/hybrid_localization/test/: test_eskf_core.cpp  test_eskf_corrector.cpp  test_fgo_backend.cpp  test_imu_preintegration.cpp
ros/src/perception/tensorrt_inference_manager/: CMakeLists.txt  package.xml
ros/src/perception/tensorrt_inference_manager/config/: models.yaml
ros/src/perception/tensorrt_inference_manager/include/tensorrt_inference_manager/: inference_manager.hpp  model_runner.hpp  nvbuf_pool.hpp  scheduler.hpp
ros/src/perception/tensorrt_inference_manager/launch/: inference_manager.launch.py  inference_manager.launch.xml
ros/src/perception/tensorrt_inference_manager/src/: inference_manager.cpp  inference_manager_node.cpp  model_runner.cpp  nvbuf_pool.cpp  scheduler.cpp
ros/src/perception/tensorrt_inference_manager/test/: test_nvbuf_pool.cpp  test_scheduler.cpp
ros/src/sensor_component/camera_manager/: CMakeLists.txt  package.xml
ros/src/sensor_component/camera_manager/config/: cameras.yaml
ros/src/sensor_component/camera_manager/include/camera_manager/: camera_config.hpp  camera_manager.hpp  camera_pipeline.hpp
ros/src/sensor_component/camera_manager/launch/: camera_manager.launch.py  camera_manager.launch.xml
ros/src/sensor_component/camera_manager/src/: camera_config.cpp  camera_manager.cpp  camera_manager_node.cpp  camera_pipeline.cpp
ros/src/sensor_component/camera_manager/test/: test_camera_config.cpp  test_camera_pipeline.cpp
ros/src/system/gpu_watchdog/: CMakeLists.txt  package.xml
ros/src/system/gpu_watchdog/include/gpu_watchdog/: gpu_watchdog.hpp
ros/src/system/gpu_watchdog/launch/: gpu_watchdog.launch.py  gpu_watchdog.launch.xml
ros/src/system/gpu_watchdog/src/: gpu_watchdog.cpp  gpu_watchdog_node.cpp
ros/src/system/gpu_watchdog/test/: test_gpu_watchdog.cpp
ros/src/system/metrics_manager/: CMakeLists.txt  package.xml
ros/src/system/metrics_manager/include/metrics_manager/: metrics_manager.hpp
ros/src/system/metrics_manager/launch/: metrics_manager.launch.py  metrics_manager.launch.xml
ros/src/system/metrics_manager/src/: metrics_manager.cpp  metrics_manager_node.cpp
ros/src/system/metrics_manager/test/: test_metrics_manager.cpp
ros/src/system/pipeline_profiler/: CMakeLists.txt  package.xml
ros/src/system/pipeline_profiler/include/pipeline_profiler/: pipeline_profiler.hpp
ros/src/system/pipeline_profiler/launch/: pipeline_profiler.launch.py  pipeline_profiler.launch.xml
ros/src/system/pipeline_profiler/src/: pipeline_profiler.cpp  pipeline_profiler_node.cpp
ros/src/system/pipeline_profiler/test/: test_pipeline_profiler.cpp
ros/src/tools/hybrid_localization_evaluation_tool/: CMakeLists.txt  README.md  package.xml
ros/src/tools/hybrid_localization_evaluation_tool/include/hybrid_localization_evaluation_tool/: alert_engine.hpp  diagnostic_parser.hpp  evaluation_node.hpp  ground_truth_analyzer.hpp  health_state_engine.hpp  innovation_analyzer.hpp  kpi_engine.hpp  main_window.hpp  ros_qt_bridge.hpp  session_store.hpp  storage_exporter.hpp
ros/src/tools/hybrid_localization_evaluation_tool/launch/: hybrid_localization_evaluation_tool.launch.xml
ros/src/tools/hybrid_localization_evaluation_tool/src/: alert_engine.cpp  diagnostic_parser.cpp  evaluation_node.cpp  ground_truth_analyzer.cpp  health_state_engine.cpp  innovation_analyzer.cpp  kpi_engine.cpp  main.cpp  main_window.cpp  ros_qt_bridge.cpp  session_store.cpp  storage_exporter.cpp
ros/src/tools/hybrid_localization_evaluation_tool/src/ui/: covariance_noise_tab.cpp  events_inspector_tab.cpp  export_session_tab.cpp  fusion_quality_tab.cpp  ground_truth_error_tab.cpp  overview_tab.cpp  pose_trajectory_tab.cpp  sensor_timing_tab.cpp
ros/src/tools/hybrid_localization_evaluation_tool/test/: test_diagnostic_parser.cpp  test_kpi_engine.cpp
(+46 files in other folders)
