<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autodriver_bringup</name>
  <version>0.1.0</version>
  <description>
    Top-level launch and shared configuration for the autodriver perception system.
    Contains:
      - launch/perception_system.launch.xml  (full system launch)
      - config/system.yaml                   (shared node parameters)
  </description>
  <maintainer email="damgi.dev@gmail.com">DamGi Ahn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>camera_manager</exec_depend>
  <exec_depend>tensorrt_inference_manager</exec_depend>
  <exec_depend>metrics_manager</exec_depend>
  <exec_depend>pipeline_profiler</exec_depend>
  <exec_depend>gpu_watchdog</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
