<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ipc_unix_socket</name>
  <version>0.1.0</version>
  <description>
    High-performance Unix Domain Socket IPC library with SCM_RIGHTS DMABUF FD passing.
    Zero-copy frame transport between camera_manager and tensorrt_inference_manager.
  </description>
  <maintainer email="damgi.dev@gmail.com">DamGi Ahn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autodriver_cmake</depend>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
