<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_manager</name>
  <version>0.1.0</version>
  <description>
    Multi-camera GStreamer NVMM pipeline manager for Jetson Orin.
    Captures frames via nvv4l2camerasrc, extracts NvBufSurface,
    exports DMABUF FDs, and transmits to inference pipeline via Unix socket IPC.
  </description>
  <maintainer email="damgi.dev@gmail.com">DamGi Ahn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ipc_unix_socket</depend>

  <!-- GStreamer, CUDA, NvBufSurface found via CMake find_package/pkg-config -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
