<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>metrics_manager</name>
  <version>0.1.0</version>
  <description>
    System metrics publisher for the autodriver perception pipeline.
    Publishes camera FPS, frame drops, batch sizes, inference latency,
    GPU utilization, GPU memory, and temperature at 1Hz via ROS2 topics.
  </description>
  <maintainer email="damgi.dev@gmail.com">DamGi Ahn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <depend>autodriver_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
